--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^0.7.11"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
